<resources>
    <string name="appName">kotlinOne</string>
    <string name="activityMainCenterTextView">Hello!!!!</string>
    <string name="movieDetailsTextViewName">Avengers: \nEnd Game</string>
    <string name="pathBack">Back</string>
    <string name="textViewTegLine">Action, Adventure, Fantasy</string>
    <string name="movieDetailsTextViewSomeId">13+</string>
    <string name="textViewReview">Reviews</string>
    <string name="textViewStoryLine">Storyline</string>
    <string name="storyLineContent">After the devastating events of Avengers: Infinity War, the universe is in ruins. With the help of remaining allies, the Avengers assemble once more in order to reverse Thanos\' actions and restore balance to the universe.</string>
    <string name="heading">Cast</string>
    <string name="robertDown">Robert \nDowney Jr.</string>
    <string name="chrisEvans">Chris \nEvans</string>
    <string name="markRuffal">Mark \nRuffalo</string>
    <string name="chrisHemsworth">Chris \nHemsworth</string>
    <string name="todo">TODO</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fmlWarszawaPo">Павлодар, Казахстан</string>
    <string name="fmlSomeId">13+</string>
    <string name="fmlTag">Action, Adventure, Drama</string>
    <string name="fmlTextViewMin">min</string>
    <string name="fmlNameMovie">Avengers: End Game</string>
    <string name="oveList">button</string>
    <string name="fragmentMovieChosenText">You chose: %1$s</string>
    <string name="frg_name_text">Robert \nDowney Jr.</string>
    <string name="find_best_movie">Find the Best Movie</string>
    <string name="channel_new_messages">Best New Movie</string>
    <string name="channel_new_messages_description">The Best Movie from Load Movies</string>
    <string name="permission_denied">"Permissions denied"</string>
    <string name="permission_is_required_select">"Permission is required to select the movie screening date"</string>
    <string name="calendar_event_is_ready">"Запланирован просмотр фильма на "</string>
    <string name="calendar_contract_events_title">"Фильм"</string>
    <string name="calendar_contract_events_description">"Запланирован просмотр фильма"</string>
    <string name="constraintlayoutTransitionName">"shared_element_container"</string>
    <string name="fmdСonstraintlayoutTransitionName">"2shared_element_container"</string>




</resources>