<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="184dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MovieDetailsActivity">
            <View
                android:id="@+id/fmdBackground"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/bg_details"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/fmdPoster"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                android:layout_margin="4dp"
                android:src="@drawable/orig"
                android:background="@drawable/mask"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="@id/fmdGuidelineHorizontalCenter"
                />
            <ProgressBar
                android:id="@+id/progressBarMovieDetails"
                android:visibility="invisible"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                tools:ignore="MissingConstraints" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guidelineCenter2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fmdGuidelinePath10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fmdGuidelineHorizontalCenter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.4" />

            <ImageView
                android:id="@+id/fmdImageViewPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/fmdGuidelinePath10"
                app:layout_constraintEnd_toStartOf="@+id/fmdTextViewPath"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fmdGuidelinePath10"
                app:srcCompat="@drawable/path" />

            <TextView
                android:id="@+id/fmdTextViewPath"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:text="@string/pathBack"
                android:textColor="@color/colorPath"
                app:layout_constraintBottom_toTopOf="@+id/fmdGuidelinePath10"
                app:layout_constraintStart_toEndOf="@+id/fmdImageViewPath"
                app:layout_constraintTop_toTopOf="@+id/fmdGuidelinePath10" />

            <TextView
                android:id="@+id/fmdTeg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/textViewTegLine"
                android:textAlignment="textStart"
                android:textAppearance="@style/tag"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fmdMovieName" />

            <TextView
                android:id="@+id/fmdMovieName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_margin="16dp"
                android:fontFamily="@font/roboto_condensed_light"
                android:gravity="center_vertical"
                android:lineHeight="40sp"
                android:lineSpacingExtra="0sp"
                android:minLines="2"
                android:text="@string/movieDetailsTextViewName"
                android:textAppearance="@style/name"
                android:textColor="@color/colorName"
                app:layout_constraintBottom_toTopOf="@+id/fmdGuidelineHorizontalCenter"
                app:layout_constraintTop_toTopOf="@+id/fmdGuidelineHorizontalCenter"
                tools:targetApi="p" />

            <TextView
                android:id="@+id/fmdSomeId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="16dp"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/movieDetailsTextViewSomeId"
                android:textAppearance="@style/someId"
                app:layout_constraintBottom_toTopOf="@+id/fmdMovieName"
                app:layout_constraintStart_toStartOf="parent" />

            <View
                android:id="@+id/rectangle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:alpha="0.9"
                android:background="@drawable/shape_rect"
                app:layout_constraintBottom_toBottomOf="@+id/fmdSomeId"
                app:layout_constraintEnd_toEndOf="@+id/fmdSomeId"
                app:layout_constraintStart_toStartOf="@+id/fmdSomeId"
                app:layout_constraintTop_toTopOf="@+id/fmdSomeId" />

            <RatingBar
                android:id="@+id/fmdRatingBar"
                android:layout_width="241dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:numStars="5"
                android:rating="4"
                android:scaleX=".5"
                android:scaleY=".5"
                android:stepSize="0.5"
                android:textAppearance="@style/tag"
                android:theme="@style/MyRatingBar"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fmdTeg" />

            <TextView
                android:id="@+id/fmdReview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textViewReview"
                android:textAllCaps="true"
                android:textColor="@color/colorTextGrey"
                android:textSize="16sp"
                app:layout_constraintEnd_toStartOf="@+id/guidelineCenter2"
                app:layout_constraintStart_toEndOf="@+id/fmdRatingBar"
                app:layout_constraintTop_toBottomOf="@+id/fmdTeg" />

            <TextView
                android:id="@+id/storyLine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/textViewStoryLine"
                android:textAppearance="@style/afterTheD"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fmdRatingBar" />

            <TextView
                android:id="@+id/fmdStoryLineContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/storyLineContent"
                android:textAppearance="@style/afterTheD"
                app:layout_constraintTop_toBottomOf="@+id/storyLine"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="8sp"
                android:text="@string/heading"
                android:textAppearance="@style/heading"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fmdStoryLineContent" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/fmdRecyclerActor"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/heading" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>

