<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="204dp"
        tools:layout_editor_absoluteY="184dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".MovieDetailsActivity">

            <View
                android:id="@+id/fmlBgMoveList"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/bg"
                app:layout_constraintBottom_toTopOf="@+id/fmlGuidelinePath10"
                app:layout_constraintTop_toTopOf="@+id/fmlGuidelinePath10"
                tools:ignore="MissingConstraints" />


            <View
                android:id="@+id/fmlMainBackGround"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:background="@drawable/bg_botton"
                tools:ignore="MissingConstraints"
                tools:layout_editor_absoluteX="0dp"
                tools:layout_editor_absoluteY="0dp" />



            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fmlGuidelinePath10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.08" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fmlGuidelinePath20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.18" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fmlGuidelinePath50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.50" />


            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fmlguidelineCenter25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/fmlguidelineCenter50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />


            <View
                android:id="@+id/fmlCombinedShape"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="16dp"
                android:background="@drawable/combined_shape"
                app:layout_constraintBottom_toTopOf="@+id/fmlGuidelinePath10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/fmlGuidelinePath10"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/fmlWarszawaPo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4sp"
                android:text="@string/fmlWarszawaPo"
                android:textAppearance="@style/fmlStyleWarszawaPo"
                app:layout_constraintBottom_toTopOf="@+id/fmlGuidelinePath10"
                app:layout_constraintStart_toEndOf="@+id/fmlCombinedShape"
                app:layout_constraintTop_toTopOf="@+id/fmlGuidelinePath10"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/fmlBackGroundMovie"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="4dp"
                android:background="@drawable/fml_bg_move"
                app:layout_constraintBottom_toBottomOf="@id/fmlGuidelinePath50"
                app:layout_constraintEnd_toStartOf="@+id/fmlguidelineCenter50"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fmlWarszawaPo"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/fmlImageViewMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"


                android:layout_marginStart="2dp"
                android:layout_marginBottom="48dp"
                android:background="@drawable/movie_movies_list"
                android:contentDescription="@string/todo"
                android:scaleType="fitStart"
                app:layout_constraintBottom_toBottomOf="@id/fmlGuidelinePath50"
                app:layout_constraintEnd_toEndOf="@+id/fmlBackGroundMovie"
                app:layout_constraintStart_toStartOf="@+id/fmlBackGroundMovie"
                app:layout_constraintTop_toTopOf="@+id/fmlBackGroundMovie"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/fmlMask"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"

                android:foreground="@drawable/fml_mask"
                app:layout_constraintBottom_toBottomOf="@id/fmlImageViewMovie"
                app:layout_constraintEnd_toEndOf="@+id/fmlImageViewMovie"
                app:layout_constraintStart_toStartOf="@+id/fmlImageViewMovie"
                app:layout_constraintTop_toTopOf="@+id/fmlBackGroundMovie"
                tools:ignore="MissingConstraints,UnusedAttribute" />

            <View
                android:id="@+id/fmlRectangle"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="6dp"
                android:alpha="0.9"
                android:background="@drawable/fml_rectangle"
                app:layout_constraintBottom_toTopOf="@+id/fmlGuidelinePath20"
                app:layout_constraintStart_toStartOf="@+id/fmlImageViewMovie"
                app:layout_constraintTop_toTopOf="@+id/fmlGuidelinePath20"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/fmlSomeId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/fmlSomeId"
                android:textAppearance="@style/fmlStyleSomeId"
                app:layout_constraintBottom_toBottomOf="@+id/fmlRectangle"
                app:layout_constraintEnd_toEndOf="@+id/fmlRectangle"
                app:layout_constraintStart_toStartOf="@+id/fmlRectangle"
                app:layout_constraintTop_toTopOf="@+id/fmlRectangle"
                tools:ignore="MissingConstraints" />

            <ImageView
                android:id="@+id/fmlLike"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="13dp"
                android:layout_marginEnd="6dp"
                android:alpha="0.75"
                android:background="@drawable/like"
                android:contentDescription="@string/todo"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toTopOf="@+id/fmlGuidelinePath20"
                app:layout_constraintEnd_toEndOf="@+id/fmlImageViewMovie"
                app:layout_constraintTop_toTopOf="@+id/fmlGuidelinePath20"
                tools:ignore="MissingConstraints" />


            <TextView
                android:id="@+id/fmlTextViewMin"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="3sp"
                android:text="@string/fmlTextViewMin"
                android:textAppearance="@style/fmlStyleTextViewMin"
                app:layout_constraintBottom_toBottomOf="@id/fmlBackGroundMovie"
                app:layout_constraintEnd_toEndOf="@id/fmlBackGroundMovie"
                app:layout_constraintStart_toStartOf="@id/fmlBackGroundMovie"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/fmlNameMovie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="4sp"
                android:text="@string/fmlNameMovie"
                android:textAppearance="@style/fmlStyleNameMovie"
                android:textColor="@color/colorPath"
                app:layout_constraintBottom_toTopOf="@+id/fmlTextViewMin"
                app:layout_constraintStart_toStartOf="@id/fmlBackGroundMovie"

                tools:ignore="MissingConstraints" />

            <RatingBar
                android:id="@+id/fmlRatingBar"
                android:layout_width="245dp"
                android:layout_height="41dp"
                android:layout_marginStart="8dp"
                android:numStars="5"
                android:rating="4"
                android:scaleX=".2"
                android:scaleY=".2"
                android:stepSize="1"
                android:textAppearance="@style/tag"
                android:theme="@style/MyRatingBar"
                android:transformPivotX="0dp"
                android:transformPivotY="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/fmlNameMovie"
                app:layout_constraintStart_toStartOf="@+id/fmlBackGroundMovie" />


            <TextView
                android:id="@+id/fmlTag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:gravity="center_vertical"
                android:lineSpacingExtra="3sp"
                android:text="@string/fmlTag"
                android:textAppearance="@style/tag"
                app:layout_constraintBottom_toTopOf="@+id/fmlRatingBar"
                app:layout_constraintStart_toStartOf="@+id/fmlBackGroundMovie"
                tools:ignore="MissingConstraints" />





        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>